--- a/Tokamak Interpretation/Engineering Perspective.ipynb
+++ b/Tokamak Interpretation/Engineering Perspective.ipynb
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "61b7e7ab",
+   "id": "5e177407",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85f15748",
+   "id": "6a722a45",
    "metadata": {},
    "source": [
     "## Two Params\n",
@@ -429,27 +429,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 128,
    "id": "52a64d66",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pdb # For debugging || pdb.set_trace()\n",
     "\n",
-    "def get_twods3D_plot_DB5(db5, data, rotation, parameter, saveFig=False, file_name=\"\", remSPH=False):\n",
+    "def get_twods3D_plot_DB5(db5, data, rotation, parameter, stationary=True, saveFig=False, file_name=\"\", remSPH=False):\n",
+    "    \n",
+    "    colors_dict = {\n",
+    "        'AL': '#FF0000',\n",
+    "        'C': '#A84547',\n",
+    "        'C/SS': '#800080',\n",
+    "        'C/W': '#CCCC00',\n",
+    "        'IN': '#0000FF',\n",
+    "        'IN/C': '#ADD8E6',\n",
+    "        'SS': '#FA8072',\n",
+    "        'W': '#FF8C00',\n",
+    "        'UNK.': '#000000',\n",
+    "    }\n",
     "    \n",
     "    db5_  = db5.copy()\n",
     "    data1 = data[0].copy()\n",
     "    data2 = data[1].copy()\n",
-    "    \n",
-    "    HUE_ORDER_ = get_HUEORDER(db5_, c=\"tab10\")[0].copy()\n",
-    "    \n",
+    "        \n",
     "    data1[parameter] = data1[parameter].str.replace(\"UNKNOWN\",\"UNK.\", regex=False)\n",
     "    data2[parameter] = data2[parameter].str.replace(\"UNKNOWN\",\"UNK.\", regex=False)\n",
     "    \n",
-    "    HUE_ORDER_[parameter][\"UNK.\"] = HUE_ORDER_[parameter][\"UNKNOWN\"]\n",
-    "    HUE_ORDER_[parameter].pop(\"UNKNOWN\")\n",
-    "    HUE_ORDER_[parameter][\"UNK.\"] = (0, 0, 0)\n",
     "    \n",
     "    x, y, z = \"NUSTAR\", \"RHOSTAR\", \"Q95\"\n",
     "    \n",
@@ -458,13 +465,9 @@
     "        data1 = data1[~data1.TOK.isin(['START','MAST','NSTX'])]\n",
     "        data2 = data2[~data2.TOK.isin(['START','MAST','NSTX'])]\n",
     "        y_sp = (11, 25, 11)\n",
-    "        if parameter==\"TOK\":\n",
-    "            HUE_ORDER_[parameter].pop('START')\n",
-    "            HUE_ORDER_[parameter].pop('MAST')\n",
-    "            HUE_ORDER_[parameter].pop('NSTX')\n",
     "    \n",
-    "    data1[\"colors\"] = data1[parameter].map(HUE_ORDER_[parameter]) \n",
-    "    data2[\"colors\"] = data2[parameter].map(HUE_ORDER_[parameter])\n",
+    "    data1[\"colors\"] = data1[parameter].map(colors_dict) \n",
+    "    data2[\"colors\"] = data2[parameter].map(colors_dict)\n",
     "    \n",
     "    fig = plt.figure(figsize=(13, 4.5))\n",
     "    ax1 = fig.add_subplot(121, projection='3d')\n",
@@ -500,19 +503,21 @@
     "    ax2.set_yticklabels(ax2.get_yticks(), rotation=45)\n",
     "    ax2.view_init(elev=15, azim=rotation)\n",
     "    \n",
-    "    # Add a legend | COMMENT WHEN ROTATING\n",
-    "    \n",
-    "    pdb.set_trace()\n",
-    "    \n",
-    "    legend_elements = []\n",
-    "    for category, color in HUE_ORDER_[parameter].items():\n",
-    "        legend_elements.append(plt.Line2D([1], [1], marker='o', \n",
-    "                                          color='w', label=category, markerfacecolor=color, markersize=7))\n",
-    "    legend = ax1.legend(handles=legend_elements, frameon=False,\n",
-    "                       loc='upper right', bbox_to_anchor=(1.4, 0.9), fontsize=9)\n",
-    "    \n",
-    "    ax1.annotate(parameter, xy=(1.1, 0.9), xycoords='axes fraction',\n",
+    "    if stationary:\n",
+    "        legend_elements = []\n",
+    "        for category, color in colors_dict.items():\n",
+    "            legend_elements.append(plt.Line2D([1], [1], marker='o', \n",
+    "                                   color='w', label=category, markerfacecolor=color, markersize=7))\n",
+    "        legend = ax1.legend(handles=legend_elements, frameon=False,\n",
+    "                 loc='upper right', bbox_to_anchor=(1.34, 0.9), fontsize=9)\n",
+    "        ax1.annotate(parameter, xy=(1.1, 0.9), xycoords='axes fraction',\n",
     "                 fontsize=10, fontweight='bold')\n",
+    "    else:\n",
+    "        for i in range(len(colors_dict)):\n",
+    "            ax1.annotate(list(colors_dict.keys())[i], xy=(1.15, 0.9-0.05*i), xycoords='axes fraction',\n",
+    "                 fontsize=12, fontweight='bold', color=list(colors_dict.values())[i])\n",
+    "        ax1.annotate(parameter, xy=(1.1, 1), xycoords='axes fraction',\n",
+    "                 fontsize=12)\n",
     "    \n",
     "    ax1.set_title(\"Decreasing\\n$\\\\alpha_R \\\\sim 0.64$\")\n",
     "    ax2.set_title(\"Unaffected\\n$\\\\alpha_R \\\\sim 2.16$\")\n",
@@ -525,69 +530,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "21e9b801",
+   "execution_count": 129,
+   "id": "bba71a91",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> \u001b[0;32m/tmp/ipykernel_9574/555024310.py\u001b[0m(71)\u001b[0;36mget_twods3D_plot_DB5\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m     69 \u001b[0;31m    \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     70 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m---> 71 \u001b[0;31m    \u001b[0mlegend_elements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     72 \u001b[0;31m    \u001b[0;32mfor\u001b[0m \u001b[0mcategory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mHUE_ORDER_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mparameter\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     73 \u001b[0;31m        legend_elements.append(plt.Line2D([1], [1], marker='o', \n",
-      "\u001b[0m\n",
-      "ipdb> HUE_ORDER_\n",
-      "{'ICSCHEME': {'H2NDHARM': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'HE3MIN-T': (1.0, 0.4980392156862745, 0.054901960784313725), 'HMIN': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'NONE': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'UNKNOWN': (0.5803921568627451, 0.403921568627451, 0.7411764705882353)}, 'ELMTYPE': {'TYPE-1+2': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'TYPE-1+5': (1.0, 0.4980392156862745, 0.054901960784313725), 'TYPE-I': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'TYPE-II': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'TYPE-III': (0.5803921568627451, 0.403921568627451, 0.7411764705882353), 'TYPE-RF': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'TYPE-V': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902), 'UNKNOWN': (0.4980392156862745, 0.4980392156862745, 0.4980392156862745)}, 'HYBRID': {'NO': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'UNKNOWN': (1.0, 0.4980392156862745, 0.054901960784313725), 'YES': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313)}, 'AUXHEAT': {'EC': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'IC': (1.0, 0.4980392156862745, 0.054901960784313725), 'NB': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'NBEC': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'NBECIC': (0.5803921568627451, 0.403921568627451, 0.7411764705882353), 'NBIC': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'NONE': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902), 'UNKNOWN': (0.4980392156862745, 0.4980392156862745, 0.4980392156862745)}, 'DIVMAT': {'C': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'C/BE': (1.0, 0.4980392156862745, 0.054901960784313725), 'C/W': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'IN': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'MO': (0.5803921568627451, 0.403921568627451, 0.7411764705882353), 'SS': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'TI': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902), 'UNKNOWN': (0.4980392156862745, 0.4980392156862745, 0.4980392156862745), 'W': (0.7372549019607844, 0.7411764705882353, 0.13333333333333333)}, 'WALMAT': {'AL': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'C': (1.0, 0.4980392156862745, 0.054901960784313725), 'C/SS': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'C/W': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'IN': (0.5803921568627451, 0.403921568627451, 0.7411764705882353), 'IN/C': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'SS': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902), 'W': (0.7372549019607844, 0.7411764705882353, 0.13333333333333333), 'UNK.': (0, 0, 0)}, 'EVAP': {'BE': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'BO': (1.0, 0.4980392156862745, 0.054901960784313725), 'C': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'C-BO': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'C-H': (0.5803921568627451, 0.403921568627451, 0.7411764705882353), 'DECABOA': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'NONE': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902), 'SILICON': (0.4980392156862745, 0.4980392156862745, 0.4980392156862745), 'TI': (0.7372549019607844, 0.7411764705882353, 0.13333333333333333), 'UNKNOWN': (0.09019607843137255, 0.7450980392156863, 0.8117647058823529)}, 'ECHMODE': {'NONE': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'O': (1.0, 0.4980392156862745, 0.054901960784313725), 'UNKNOWN': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'X': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392)}, 'PELLET': {'D': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'GAS-FUEL': (1.0, 0.4980392156862745, 0.054901960784313725), 'H': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'NONE': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'UNKNOWN': (0.5803921568627451, 0.403921568627451, 0.7411764705882353)}, 'CONFIG': {'BOT': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'DN': (1.0, 0.4980392156862745, 0.054901960784313725), 'DND': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'IW': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'LIM': (0.5803921568627451, 0.403921568627451, 0.7411764705882353), 'MAR': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'SN': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902), 'SN(L)': (0.4980392156862745, 0.4980392156862745, 0.4980392156862745), 'SN(U)': (0.7372549019607844, 0.7411764705882353, 0.13333333333333333), 'TOP': (0.09019607843137255, 0.7450980392156863, 0.8117647058823529), 'UNKNOWN': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765)}, 'LIMMAT': {'BE': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'C': (1.0, 0.4980392156862745, 0.054901960784313725), 'C-W': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'MO': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'NONE': (0.5803921568627451, 0.403921568627451, 0.7411764705882353), 'UNKNOWN': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'W': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902)}, 'TOK': {'ASDEX': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'AUG': (1.0, 0.4980392156862745, 0.054901960784313725), 'AUGW': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'CMOD': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'COMPASS': (0.5803921568627451, 0.403921568627451, 0.7411764705882353), 'D3D': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'JET': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902), 'JETILW': (0.4980392156862745, 0.4980392156862745, 0.4980392156862745), 'JFT2M': (0.7372549019607844, 0.7411764705882353, 0.13333333333333333), 'JT60U': (0.09019607843137255, 0.7450980392156863, 0.8117647058823529), 'MAST': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'NSTX': (1.0, 0.4980392156862745, 0.054901960784313725), 'PBXM': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'PDX': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'START': (0.8235, 0.5055, 0.4412), 'TCV': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'TDEV': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902), 'TFTR': (0.4980392156862745, 0.4980392156862745, 0.4980392156862745)}, 'Spherical': {'No Spherical': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'Spherical': (1.0, 0.4980392156862745, 0.054901960784313725)}, 'label_joe': {'Decreasing': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'Unaffected': (1.0, 0.4980392156862745, 0.054901960784313725)}}\n",
-      "ipdb> HUE_ORDER_[parameter]\n",
-      "{'AL': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'C': (1.0, 0.4980392156862745, 0.054901960784313725), 'C/SS': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'C/W': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'IN': (0.5803921568627451, 0.403921568627451, 0.7411764705882353), 'IN/C': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'SS': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902), 'W': (0.7372549019607844, 0.7411764705882353, 0.13333333333333333), 'UNK.': (0, 0, 0)}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ipdb> \n",
-      "{'AL': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'C': (1.0, 0.4980392156862745, 0.054901960784313725), 'C/SS': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'C/W': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'IN': (0.5803921568627451, 0.403921568627451, 0.7411764705882353), 'IN/C': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'SS': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902), 'W': (0.7372549019607844, 0.7411764705882353, 0.13333333333333333), 'UNK.': (0, 0, 0)}\n",
-      "ipdb> \n",
-      "{'AL': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'C': (1.0, 0.4980392156862745, 0.054901960784313725), 'C/SS': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'C/W': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'IN': (0.5803921568627451, 0.403921568627451, 0.7411764705882353), 'IN/C': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'SS': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902), 'W': (0.7372549019607844, 0.7411764705882353, 0.13333333333333333), 'UNK.': (0, 0, 0)}\n",
-      "ipdb> \n",
-      "{'AL': (0.12156862745098039, 0.4666666666666667, 0.7058823529411765), 'C': (1.0, 0.4980392156862745, 0.054901960784313725), 'C/SS': (0.17254901960784313, 0.6274509803921569, 0.17254901960784313), 'C/W': (0.8392156862745098, 0.15294117647058825, 0.1568627450980392), 'IN': (0.5803921568627451, 0.403921568627451, 0.7411764705882353), 'IN/C': (0.5490196078431373, 0.33725490196078434, 0.29411764705882354), 'SS': (0.8901960784313725, 0.4666666666666667, 0.7607843137254902), 'W': (0.7372549019607844, 0.7411764705882353, 0.13333333333333333), 'UNK.': (0, 0, 0)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_twods3D_plot_DB5(DB5, data, 0, \"WALMAT\", False, \"test\")"
+    "#get_twods3D_plot_DB5(DB5, data, 220, \"WALMAT\", stationary=True, saveFig=True, file_name=\"test\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "b8ea756f",
+   "execution_count": 112,
+   "id": "40e1be6c",
    "metadata": {},
    "outputs": [],
    "source": [
     "for r in np.linspace(0,360, 360//2):\n",
     "    file_name = f\"GIF_images/image_{int(r)}.png\"\n",
-    "    get_twods3D_plot_DB5(DB5, data, int(r), \"DIVMAT\", \n",
+    "    get_twods3D_plot_DB5(DB5, data, int(r), \"WALMAT\", \n",
     "                         saveFig=True, file_name=file_name, remSPH=False\n",
     "                        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "cd69365c",
+   "execution_count": 113,
+   "id": "b0ec7c59",
    "metadata": {},
    "outputs": [],
    "source": [
+    "for r in np.linspace(0,360, 360//2):\n",
+    "    file_name = f\"GIF_images/image_{int(r)}.png\"\n",
+    "    get_twods3D_plot_DB5(DB5, data, int(r), \"WALMAT\", \n",
+    "                         saveFig=True, file_name=file_name, remSPH=False\n",
+    "                        )\n",
+    "\n",
     "x,y,z = \"NUSTAR\", \"RHOSTAR\", \"Q95\"\n",
     "\n",
     "image_folder = path+\"GIF_images/\"  # Path to the folder containing the images\n",
-    "output_file = path+\"/GIFs/\"+f\"roDIV{x[0]}{y[0]}{z[0]}.gif\"  # Output file name\n",
+    "output_file = path+\"/GIFs/\"+f\"roWAL{x[0]}{y[0]}{z[0]}.gif\"  # Output file name\n",
     "\n",
     "# Get a list of PNG files in the folder\n",
     "image_files = [os.path.join(image_folder, file) for file in os.listdir(image_folder) if file.endswith('.png')]\n",
@@ -601,7 +582,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1963ec85",
+   "id": "bdd6b87a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bccc5de",
    "metadata": {},
    "outputs": [],
    "source": []
