--- a/Tokamak Interpretation/Engineering Perspective.ipynb
+++ b/Tokamak Interpretation/Engineering Perspective.ipynb
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 327,
-   "id": "c9e425e7",
+   "id": "55a3883b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 260,
-   "id": "b9649152",
+   "id": "0d4c56da",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94270621",
+   "id": "9bf05ac2",
    "metadata": {},
    "source": [
     "## Two Params\n",
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
-   "id": "79df6ce3",
+   "id": "ba50ee2a",
    "metadata": {
     "scrolled": false
    },
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 356,
-   "id": "954a96d8",
+   "id": "715ec4b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 357,
-   "id": "84610bb2",
+   "id": "b91b939e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "eb6b6980",
+   "id": "fc8721ec",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "id": "20d9dc67",
+   "id": "eaccf9bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "id": "f8b1a402",
+   "id": "f5ff3a4c",
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "id": "7328df33",
+   "id": "3f2ba6da",
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 261,
-   "id": "08e60630",
+   "id": "bb5da803",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 262,
-   "id": "7f7f14fa",
+   "id": "613fce99",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "c83d9b20",
+   "id": "ab097578",
    "metadata": {},
    "outputs": [
     {
@@ -775,8 +775,260 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 361,
+   "id": "b28013a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['BE'], dtype=object)"
+      ]
+     },
+     "execution_count": 361,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB5[DB5.TOK.isin(['JETILW'])][\"LIMMAT\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "id": "0693967b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.321"
+      ]
+     },
+     "execution_count": 377,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(DB5[\"TAUTH\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
+   "id": "486ba6dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.356163227269"
+      ]
+     },
+     "execution_count": 363,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(data1[data1.TOK.isin(['JETILW'])][\"TAUTH\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "id": "29056325",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.352657479902"
+      ]
+     },
+     "execution_count": 364,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(data2[data2.TOK.isin(['JETILW'])][\"TAUTH\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "id": "4731285d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9319"
+      ]
+     },
+     "execution_count": 365,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(data1[\"TAUTH\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "id": "6c558e61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "824    D30MET\n",
+       "Name: id, dtype: object"
+      ]
+     },
+     "execution_count": 383,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1[data1[\"TAUTH\"] > 0.9][\"id\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 381,
+   "id": "37f64057",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3121    LV6QYS\n",
+       "Name: id, dtype: object"
+      ]
+     },
+     "execution_count": 381,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB5[DB5[\"TAUTH\"] > 1.3][\"id\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "id": "11d6f1e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ind</th>\n",
+       "      <th>id</th>\n",
+       "      <th>PHASE</th>\n",
+       "      <th>TOK</th>\n",
+       "      <th>IP</th>\n",
+       "      <th>BT</th>\n",
+       "      <th>NEL</th>\n",
+       "      <th>PLTH</th>\n",
+       "      <th>RGEO</th>\n",
+       "      <th>KAREA</th>\n",
+       "      <th>EPS</th>\n",
+       "      <th>MEFF</th>\n",
+       "      <th>TAUTH</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>SHOT</th>\n",
+       "      <th>TIME</th>\n",
+       "      <th>Q95</th>\n",
+       "      <th>ZEFF</th>\n",
+       "      <th>AMIN</th>\n",
+       "      <th>VOL</th>\n",
+       "      <th>POHM</th>\n",
+       "      <th>PNBI</th>\n",
+       "      <th>DWDIA</th>\n",
+       "      <th>DWMHD</th>\n",
+       "      <th>PICRH</th>\n",
+       "      <th>PECRH</th>\n",
+       "      <th>PL</th>\n",
+       "      <th>PFLOSS</th>\n",
+       "      <th>TAV</th>\n",
+       "      <th>LCOULOMB</th>\n",
+       "      <th>QCYL5</th>\n",
+       "      <th>TAUBOHM</th>\n",
+       "      <th>RHOSTAR</th>\n",
+       "      <th>BETASTAR</th>\n",
+       "      <th>NUSTAR</th>\n",
+       "      <th>OMEGACYCL</th>\n",
+       "      <th>IP_error</th>\n",
+       "      <th>BT_error</th>\n",
+       "      <th>NEL_error</th>\n",
+       "      <th>PLTH_error</th>\n",
+       "      <th>POHM_error</th>\n",
+       "      <th>PNBI_error</th>\n",
+       "      <th>DWDIA_error</th>\n",
+       "      <th>DWMHD_error</th>\n",
+       "      <th>PICRH_error</th>\n",
+       "      <th>PECRH_error</th>\n",
+       "      <th>PL_error</th>\n",
+       "      <th>PFLOSS_error</th>\n",
+       "      <th>RGEO_error</th>\n",
+       "      <th>AMIN_error</th>\n",
+       "      <th>EPS_error</th>\n",
+       "      <th>VOL_error</th>\n",
+       "      <th>KAREA_error</th>\n",
+       "      <th>MEFF_error</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [ind, id, PHASE, TOK, IP, BT, NEL, PLTH, RGEO, KAREA, EPS, MEFF, TAUTH, DATE, SHOT, TIME, Q95, ZEFF, AMIN, VOL, POHM, PNBI, DWDIA, DWMHD, PICRH, PECRH, PL, PFLOSS, TAV, LCOULOMB, QCYL5, TAUBOHM, RHOSTAR, BETASTAR, NUSTAR, OMEGACYCL, IP_error, BT_error, NEL_error, PLTH_error, POHM_error, PNBI_error, DWDIA_error, DWMHD_error, PICRH_error, PECRH_error, PL_error, PFLOSS_error, RGEO_error, AMIN_error, EPS_error, VOL_error, KAREA_error, MEFF_error]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 384,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB2[DB2.id.isin([\"D30MET\"])]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "53297b0e",
+   "id": "596882f6",
    "metadata": {},
    "outputs": [],
    "source": []
