--- a/STDB5-Feature_Analysis.ipynb
+++ b/STDB5-Feature_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3f691e30",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4f834bdc",
    "metadata": {},
    "outputs": [],
@@ -44,19 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b09db631",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40.69% of the data decreased alpha_R\n",
-      "59.31% of the data did not decrease alpha_R\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Obtained from Optimization\n",
     "min_subset_ids = pd.read_csv(path+\"id_vs_frequency_decreasing_ds.csv\")\n",
@@ -84,46 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e846768d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14153, 192)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "raw_DB5.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7480b018",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['1982', '1983', '1984', '1985', '1986', '1990', '1994', '1995',\n",
-       "       '1996', '1998', '1999', '2000', '2001', '2002', '2003', '2004',\n",
-       "       '2005', '2006', '2008', '2009', '2011', '2012', '2013', '2014',\n",
-       "       '2015', '2016', '2017', '1997', '1987', '1989', '1991', '1992',\n",
-       "       '1993', '1988'], dtype=object)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "raw_DB5.DATE.astype(str).apply(lambda x: x[:4]).unique()"
    ]
@@ -379,12 +344,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b76c170b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Investigating The Dependence On Machine Size Of The Energy Confinement In Tokamaks Using Data-Driven Methods'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "strrr"
+    "\"INVESTIGATING THE DEPENDENCE ON MACHINE SIZE OF THE ENERGY CONFINEMENT IN TOKAMAKS USING DATA-DRIVEN METHODS\".title()"
    ]
   },
   {
