--- a/Tokamak Interpretation/BRNQ.ipynb
+++ b/Tokamak Interpretation/BRNQ.ipynb
@@ -72,7 +72,7 @@
     "        \"Q95\":3.2,\n",
     "        \"KAREA\":1.59,\n",
     "        \"EPS\":3.1,\n",
-    "        \"MEFF\":6.27\n",
+    "        \"MEFF\":2.67\n",
     "       }\n",
     "\n",
     "ITER = {\"TAUTH\":3.1, # s\n",
@@ -278,6 +278,143 @@
    "source": [
     "ITER"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "39bb0908",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IP</th>\n",
+       "      <th>BT</th>\n",
+       "      <th>NEL</th>\n",
+       "      <th>PLTH</th>\n",
+       "      <th>RGEO</th>\n",
+       "      <th>KAREA</th>\n",
+       "      <th>EPS</th>\n",
+       "      <th>MEFF</th>\n",
+       "      <th>A</th>\n",
+       "      <th>RHOSTAR</th>\n",
+       "      <th>BETASTAR</th>\n",
+       "      <th>NUSTAR</th>\n",
+       "      <th>QCYL5</th>\n",
+       "      <th>Q95</th>\n",
+       "      <th>TAUTH_exp</th>\n",
+       "      <th>TAUTH_pred</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TOK</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ITER</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>87</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>0.322581</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0.0020</td>\n",
+       "      <td>2.24</td>\n",
+       "      <td>0.014</td>\n",
+       "      <td>1.94</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>2.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SPARC</th>\n",
+       "      <td>8.7</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>1.97</td>\n",
+       "      <td>0.308108</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.0027</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>0.029</td>\n",
+       "      <td>2.46</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.73</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         IP    BT   NEL  PLTH  RGEO  KAREA       EPS  MEFF     A  RHOSTAR  \\\n",
+       "TOK                                                                         \n",
+       "ITER   15.0   5.3  1.03    87  6.20   1.80  0.322581   2.5  2.00   0.0020   \n",
+       "SPARC   8.7  12.2  3.10    25  1.85   1.97  0.308108   2.5  0.57   0.0027   \n",
+       "\n",
+       "       BETASTAR  NUSTAR  QCYL5  Q95  TAUTH_exp  TAUTH_pred  \n",
+       "TOK                                                         \n",
+       "ITER       2.24   0.014   1.94  3.0       3.50        2.94  \n",
+       "SPARC      1.20   0.029   2.46  NaN       0.77        0.73  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_observations = pd.read_csv(path+\"new_machines.csv\").set_index(\"TOK\")\n",
+    "new_observations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22dbad4c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
