--- a/Tokamak Interpretation/GIF/RHO_NUSTAR_ ( Q95 | BETASTAR ).ipynb
+++ b/Tokamak Interpretation/GIF/RHO_NUSTAR_ ( Q95 | BETASTAR ).ipynb
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0333c0d",
+   "id": "122e3821",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "906dc4e0",
+   "id": "7686ca21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,15 +186,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aa5bbb2",
+   "id": "aef33a5c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "id": "ce9d449c",
+   "execution_count": 252,
+   "id": "4d7aa32a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,15 +278,15 @@
     "\n",
     "    \n",
     "    if saveFig:\n",
-    "        #plt.savefig(path + file_name, format=\"png\")\n",
-    "        plt.savefig(path + file_name, format=\"pdf\", dpi=800)\n",
+    "        plt.savefig(path + file_name, format=\"png\")\n",
+    "        #plt.savefig(path + file_name, format=\"pdf\", dpi=800)\n",
     "        plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
-   "id": "f2cd154d",
+   "execution_count": 253,
+   "id": "f93573b4",
    "metadata": {},
    "outputs": [
     {
@@ -305,8 +305,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 254,
+   "id": "e350f3a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for r in np.linspace(0,360, 360//2):\n",
+    "    file_name = f\"GIF_images/image_{int(r)}.png\"\n",
+    "    get_twods3D_plot_DB5(DB5, data, int(r), saveFig=True, file_name=file_name, remSPH=False)\n",
+    "    \n",
+    "x, y, z = \"NUSTAR\", \"RHOSTAR\", \"Q95\"\n",
+    "\n",
+    "image_folder = path+\"GIF_images/\"  # Path to the folder containing the images\n",
+    "output_file = path+\"/GIFs/\"+f\"roCo{x[0]}{y[0]}{z[0]}.gif\"  # Output file name\n",
+    "\n",
+    "# Get a list of PNG files in the folder\n",
+    "image_files = [os.path.join(image_folder, file) for file in os.listdir(image_folder) if file.endswith('.png')]\n",
+    "# Sort the image files by their numerical values in the filenames\n",
+    "image_files.sort(key=lambda x: int(os.path.splitext(os.path.basename(x))[0].split('_')[-1]))\n",
+    "\n",
+    "# Save the images in the folder as an animated GIF\n",
+    "imageio.mimsave(output_file, [imageio.imread(file) for file in image_files], fps=7)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "49a43b82",
+   "id": "45f10666",
    "metadata": {},
    "source": [
     "# ROTATION"
@@ -314,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffe89292",
+   "id": "796eb8d6",
    "metadata": {},
    "source": [
     "```Python\n",
@@ -339,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a138bc79",
+   "id": "f1297f11",
    "metadata": {},
    "source": [
     "# Dynamic Plots"
@@ -403,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "61d1109d",
+   "id": "d3f4a7d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "57d7ee51",
+   "id": "b90b138c",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "051eab84",
+   "id": "baf6bb50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "986fe8d3",
+   "id": "77065da9",
    "metadata": {},
    "outputs": [],
    "source": [
