--- a/Tokamak Interpretation/GIF/RHO_NUSTAR_ ( Q95 | BETASTAR ).ipynb
+++ b/Tokamak Interpretation/GIF/RHO_NUSTAR_ ( Q95 | BETASTAR ).ipynb
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122e3821",
+   "id": "4408ab71",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7686ca21",
+   "id": "7937da98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aef33a5c",
+   "id": "cbb1d699",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "4d7aa32a",
+   "id": "6ca4c6fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "f93573b4",
+   "id": "7f80cb36",
    "metadata": {},
    "outputs": [
     {
@@ -306,19 +306,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
-   "id": "e350f3a6",
+   "execution_count": 255,
+   "id": "ad0889a6",
    "metadata": {},
    "outputs": [],
    "source": [
     "for r in np.linspace(0,360, 360//2):\n",
     "    file_name = f\"GIF_images/image_{int(r)}.png\"\n",
-    "    get_twods3D_plot_DB5(DB5, data, int(r), saveFig=True, file_name=file_name, remSPH=False)\n",
+    "    get_twods3D_plot_DB5(DB5, data, int(r), saveFig=True, file_name=file_name, remSPH=True)\n",
     "    \n",
     "x, y, z = \"NUSTAR\", \"RHOSTAR\", \"Q95\"\n",
     "\n",
     "image_folder = path+\"GIF_images/\"  # Path to the folder containing the images\n",
-    "output_file = path+\"/GIFs/\"+f\"roCo{x[0]}{y[0]}{z[0]}.gif\"  # Output file name\n",
+    "output_file = path+\"/GIFs/\"+f\"roCo{x[0]}{y[0]}{z[0]}_noSPHE.gif\"  # Output file name\n",
     "\n",
     "# Get a list of PNG files in the folder\n",
     "image_files = [os.path.join(image_folder, file) for file in os.listdir(image_folder) if file.endswith('.png')]\n",
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45f10666",
+   "id": "97ed83c5",
    "metadata": {},
    "source": [
     "# ROTATION"
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "796eb8d6",
+   "id": "3f0083a0",
    "metadata": {},
    "source": [
     "```Python\n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1297f11",
+   "id": "1b4e47cb",
    "metadata": {},
    "source": [
     "# Dynamic Plots"
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "d3f4a7d8",
+   "id": "e8c6886e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "b90b138c",
+   "id": "fa2ed58d",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "baf6bb50",
+   "id": "7d4ef399",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "77065da9",
+   "id": "7ff17149",
    "metadata": {},
    "outputs": [],
    "source": [
