--- a/Tokamak Interpretation/Engineering Perspective.ipynb
+++ b/Tokamak Interpretation/Engineering Perspective.ipynb
@@ -219,8 +219,6 @@
     "    \n",
     "    data[\"colors\"] = data[parameter].map(HUE_ORDER[parameter])\n",
     "    \n",
-    "    \n",
-    "    \n",
     "    scatter = ax.scatter(data[x], data[y], data[z], c=data[\"colors\"].values)\n",
     "    ax.set_xlabel(x, fontsize=11, labelpad=7)\n",
     "    ax.set_ylabel(y, fontsize=y_sp[0], labelpad=y_sp[1])\n",
@@ -569,7 +567,6 @@
     "    ax2.annotate(\"Unaffected\\n  $\\\\alpha_R \\\\sim 2.16$\", xy=(0.6, 0.86), xycoords='axes fraction',\n",
     "                 fontsize=12)\"\"\"\n",
     "    \n",
-    "    \n",
     "    ax1.set_xlabel(x, fontsize=11, labelpad=11)\n",
     "    ax1.set_ylabel(y, fontsize=11, labelpad=11)\n",
     "    ax1.set_zlabel(z, fontsize=11, labelpad=11)\n",
@@ -817,8 +814,161 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 225,
+   "id": "c743202a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "const   -3.004272\n",
+       "IP       0.781188\n",
+       "BT       0.320077\n",
+       "NEL      0.435161\n",
+       "PLTH    -0.668186\n",
+       "RGEO     2.222962\n",
+       "KAREA    0.390074\n",
+       "EPS      0.575613\n",
+       "MEFF     0.179800\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_ECT_regression(DB2).params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "b414af38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "const   -2.518531\n",
+       "IP       1.134330\n",
+       "BT       0.072389\n",
+       "NEL      0.174897\n",
+       "PLTH    -0.682701\n",
+       "RGEO     1.447909\n",
+       "KAREA    0.280227\n",
+       "EPS      0.063554\n",
+       "MEFF     0.214018\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_ECT_regression(DB5).params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "id": "ec48cc9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08057788876871994"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(-2.518531)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "id": "d126f395",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6252"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(DB5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "id": "8f866a5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "const   -2.338070\n",
+       "IP       1.227854\n",
+       "BT      -0.037783\n",
+       "NEL      0.146285\n",
+       "PLTH    -0.669058\n",
+       "RGEO     1.281766\n",
+       "KAREA    0.112734\n",
+       "EPS     -0.013563\n",
+       "MEFF     0.233486\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_ECT_regression(DB5[~DB5.TOK.isin([\"MAST\",\"NSTX\",\"START\"])]).params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "aa84a3e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.7747920665387076"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(len(DB5[DB5.TOK.isin([\"MAST\",\"NSTX\",\"START\"])])/len(DB5))*100"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "16d582d2",
+   "id": "03cfc91f",
    "metadata": {},
    "outputs": [],
    "source": []
