--- a/Tokamak Interpretation/Engineering Perspective.ipynb
+++ b/Tokamak Interpretation/Engineering Perspective.ipynb
@@ -179,17 +179,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0d4c56da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4942"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(data1)+len(data2)#+len(DB2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9b1f2c12",
    "metadata": {},
    "outputs": [],
@@ -251,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "984f1c05",
    "metadata": {},
    "outputs": [],
@@ -261,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "38017127",
    "metadata": {},
    "outputs": [],
@@ -271,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7b126b63",
    "metadata": {},
    "outputs": [],
@@ -390,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9d3544c5",
    "metadata": {},
    "outputs": [],
@@ -401,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4d20fb4b",
    "metadata": {},
    "outputs": [],
@@ -440,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 13,
    "id": "52a64d66",
    "metadata": {},
    "outputs": [],
@@ -601,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 14,
    "id": "ba50ee2a",
    "metadata": {
     "scrolled": false
@@ -628,26 +639,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "715ec4b1",
+   "cell_type": "markdown",
+   "id": "3d5e20b6",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "For GIFs\n",
+    "\n",
+    "```Python\n",
     "for r in np.linspace(0,360, 360//2):\n",
     "    file_name = f\"GIF_images/image_{int(r)}.png\"\n",
     "    get_twods3D_plot_DB5(DB5, data, int(r), \"LIMMAT\", stationary=False, \n",
     "                         saveFig=True, file_name=file_name, remSPH=False\n",
-    "                        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b91b939e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                        )\n",
+    "\n",
     "x,y,z = \"NUSTAR\", \"RHOSTAR\", \"TAUTH\"\n",
     "\n",
     "image_folder = path+\"GIF_images/\"  # Path to the folder containing the images\n",
@@ -659,35 +663,80 @@
     "image_files.sort(key=lambda x: int(os.path.splitext(os.path.basename(x))[0].split('_')[-1]))\n",
     "\n",
     "# Save the images in the folder as an animated GIF\n",
-    "imageio.mimsave(output_file, [imageio.imread(file) for file in image_files], fps=7)"
+    "imageio.mimsave(output_file, [imageio.imread(file) for file in image_files], fps=7)\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "id": "b91b939e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.7747920665387076"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100*len(DB5[DB5.Spherical.isin([\"Spherical\"])])/len(DB5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "fc8721ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['SS', 'C/SS', 'C', 'C/W', 'W', 'IN', 'IN/C', 'AL', 'UNKNOWN'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "DB5[\"WALMAT\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "eaccf9bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ = DB5[DB5[\"LIMMAT\"].isin(['UNKNOWN'])]#.DIVMAT.unique()"
+    "df_ = DB5[DB5[\"WALMAT\"].isin(['IN/C'])]#.DIVMAT.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f5ff3a4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['JET'], dtype=object)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_.TOK.unique()"
    ]
@@ -814,153 +863,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "id": "c743202a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "const   -3.004272\n",
-       "IP       0.781188\n",
-       "BT       0.320077\n",
-       "NEL      0.435161\n",
-       "PLTH    -0.668186\n",
-       "RGEO     2.222962\n",
-       "KAREA    0.390074\n",
-       "EPS      0.575613\n",
-       "MEFF     0.179800\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 225,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_ECT_regression(DB2).params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "id": "b414af38",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "const   -2.518531\n",
-       "IP       1.134330\n",
-       "BT       0.072389\n",
-       "NEL      0.174897\n",
-       "PLTH    -0.682701\n",
-       "RGEO     1.447909\n",
-       "KAREA    0.280227\n",
-       "EPS      0.063554\n",
-       "MEFF     0.214018\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 221,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_ECT_regression(DB5).params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": null,
    "id": "ec48cc9f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.08057788876871994"
-      ]
-     },
-     "execution_count": 222,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.exp(-2.518531)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": null,
    "id": "d126f395",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6252"
-      ]
-     },
-     "execution_count": 223,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(DB5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": null,
    "id": "8f866a5f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "const   -2.338070\n",
-       "IP       1.227854\n",
-       "BT      -0.037783\n",
-       "NEL      0.146285\n",
-       "PLTH    -0.669058\n",
-       "RGEO     1.281766\n",
-       "KAREA    0.112734\n",
-       "EPS     -0.013563\n",
-       "MEFF     0.233486\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 224,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_ECT_regression(DB5[~DB5.TOK.isin([\"MAST\",\"NSTX\",\"START\"])]).params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": null,
    "id": "aa84a3e7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.7747920665387076"
-      ]
-     },
-     "execution_count": 227,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(len(DB5[DB5.TOK.isin([\"MAST\",\"NSTX\",\"START\"])])/len(DB5))*100"
    ]
