improved for report

--- a/Classification/Sklearn_Tuning/ML_Classifiers_in_big_ds.ipynb
+++ b/Classification/Sklearn_Tuning/ML_Classifiers_in_big_ds.ipynb
@@ -137,7 +137,8 @@
     "\n",
     "# 3 subsets to study\n",
     "research_features = ['NEL','TAV','BT','RHOSTAR','NUSTAR','BETASTAR'] + categorical_features\n",
-    "entropy_low_MCL = ['WFICFORM', 'WFFORM', 'RHOSTAR', 'ZEFFNEO', 'DWDIA', 'BETASTAR', 'NUSTAR', 'PFLOSS', 'Q95'] + categorical_features\n",
+    "entropy_low_MCL = ['WFICFORM', 'WFFORM', 'RHOSTAR', 'ZEFFNEO', \n",
+    "                   'DWDIA', 'BETASTAR', 'NUSTAR', 'PFLOSS', 'Q95'] + categorical_features\n",
     "low_MLC = ['BEIMHD', 'BETASTAR', 'BT', 'DWDIA', 'ELMFREQ', 'IP', 'NEL', 'NESOL', 'NUSTAR', \n",
     "           'PECRH', 'PFLOSS', 'PICRH', 'POHM', 'PRAD', 'Q95', 'RHOSTAR', 'TIV', 'TORQ', \n",
     "           'WFFORM', 'WFICFORM', 'ZEFF', 'ZEFFNEO']\n",
