improved for report

--- a/Classification/Sklearn_Tuning/RF_Low_Multicollinearity.ipynb
+++ b/Classification/Sklearn_Tuning/RF_Low_Multicollinearity.ipynb
@@ -16,7 +16,11 @@
    "id": "330169e7",
    "metadata": {},
    "source": [
-    "# TUNED | RANDOM FOREST | LOW MULTICOLLINEARITY\n"
+    "# TUNED | RANDOM FOREST | LOW MULTICOLLINEARITY\n",
+    "\n",
+    "By: Karina Chiñas Fuentes\n",
+    "\n",
+    "Last modified: June 26, 2023."
    ]
   },
   {
