--- a/STDB5-Feature_Analysis.ipynb
+++ b/STDB5-Feature_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3f691e30",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4f834bdc",
    "metadata": {},
    "outputs": [],
@@ -44,10 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b09db631",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.69% of the data decreased alpha_R\n",
+      "59.31% of the data did not decrease alpha_R\n"
+     ]
+    }
+   ],
    "source": [
     "# Obtained from Optimization\n",
     "min_subset_ids = pd.read_csv(path+\"id_vs_frequency_decreasing_ds.csv\")\n",
@@ -75,22 +84,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e846768d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14153, 192)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "raw_DB5.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7480b018",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1982', '1983', '1984', '1985', '1986', '1990', '1994', '1995',\n",
+       "       '1996', '1998', '1999', '2000', '2001', '2002', '2003', '2004',\n",
+       "       '2005', '2006', '2008', '2009', '2011', '2012', '2013', '2014',\n",
+       "       '2015', '2016', '2017', '1997', '1987', '1989', '1991', '1992',\n",
+       "       '1993', '1988'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "raw_DB5.DATE.astype(str).apply(lambda x: x[:4]).unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "23fbcf2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1982',\n",
+       " '1983',\n",
+       " '1984',\n",
+       " '1985',\n",
+       " '1986',\n",
+       " '1987',\n",
+       " '1988',\n",
+       " '1989',\n",
+       " '1990',\n",
+       " '1991',\n",
+       " '1992',\n",
+       " '1993',\n",
+       " '1994',\n",
+       " '1995',\n",
+       " '1996',\n",
+       " '1997']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(DB2.DATE.astype(str).apply(lambda x: x[:4]).unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "eb2ed405",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1982',\n",
+       " '1983',\n",
+       " '1984',\n",
+       " '1985',\n",
+       " '1986',\n",
+       " '1987',\n",
+       " '1988',\n",
+       " '1989',\n",
+       " '1990',\n",
+       " '1991',\n",
+       " '1992',\n",
+       " '1993',\n",
+       " '1994',\n",
+       " '1995',\n",
+       " '1996',\n",
+       " '1997',\n",
+       " '1998',\n",
+       " '1999',\n",
+       " '2000',\n",
+       " '2001',\n",
+       " '2002',\n",
+       " '2003',\n",
+       " '2004',\n",
+       " '2005',\n",
+       " '2006',\n",
+       " '2008',\n",
+       " '2009',\n",
+       " '2011',\n",
+       " '2012',\n",
+       " '2013',\n",
+       " '2014',\n",
+       " '2015',\n",
+       " '2016',\n",
+       " '2017']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(DB5.DATE.astype(str).apply(lambda x: x[:4]).unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "16aa10fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1989',\n",
+       " '1990',\n",
+       " '1994',\n",
+       " '1995',\n",
+       " '1996',\n",
+       " '1997',\n",
+       " '1998',\n",
+       " '1999',\n",
+       " '2000',\n",
+       " '2001',\n",
+       " '2002',\n",
+       " '2003',\n",
+       " '2004',\n",
+       " '2005',\n",
+       " '2006',\n",
+       " '2008',\n",
+       " '2009',\n",
+       " '2011',\n",
+       " '2012',\n",
+       " '2013',\n",
+       " '2014',\n",
+       " '2015',\n",
+       " '2016',\n",
+       " '2017']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(DB5[~DB5.id.isin(DB2.id.values)].DATE.astype(str).apply(lambda x: x[:4]).unique())"
    ]
   },
   {
@@ -344,21 +513,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b76c170b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Investigating The Dependence On Machine Size Of The Energy Confinement In Tokamaks Using Data-Driven Methods'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"INVESTIGATING THE DEPENDENCE ON MACHINE SIZE OF THE ENERGY CONFINEMENT IN TOKAMAKS USING DATA-DRIVEN METHODS\".title()"
    ]
