--- a/Classification/SHAP_Values/A_different_analysis.ipynb
+++ b/Classification/SHAP_Values/A_different_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "4e24333d",
    "metadata": {},
    "source": [
-    "**IMPORTANT**: what is shown here was developed after my thesis defence.\n",
+    "**IMPORTANT**: what is shown here was developed after my thesis defence. This is just a different approach to reinforce my understanding in the topic.\n",
     "\n",
     "### Note to self: to make `cupy` work: `cthe`, `cnb`"
    ]
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "b94d4e9e",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
     "from sklearn.tree import plot_tree\n",
     "from sklearn.tree import export_graphviz\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV,StratifiedKFold\n",
     "from sklearn.metrics import precision_recall_curve, precision_recall_fscore_support\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1230c2eb",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ecb1f851",
    "metadata": {},
    "outputs": [
@@ -148,17 +148,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7c8b08f8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Low entropy and low multicollinearity features\n",
     "features = ['WFICFORM', 'WFFORM', 'RHOSTAR', 'ZEFFNEO', 'DWDIA', 'BETASTAR', 'NUSTAR', 'PFLOSS', 'Q95']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7629ca39",
    "metadata": {},
    "outputs": [],
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "18d6c965",
    "metadata": {},
    "outputs": [],
@@ -197,14 +198,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ddc335d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=71, stratify=y)"
+    "# split data, now having eval\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, \n",
+    "                                                    random_state=71, stratify=y\n",
+    "                                                   )\n",
+    "X_train, X_eval, y_train, y_eval = train_test_split(X_train, y_train, test_size=0.5, \n",
+    "                                                    random_state=71, stratify=y_train\n",
+    "                                                   )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8161d686",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.399872040946897, 0.40003198976327575, 0.20009596928982726)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Percentages per dataset\n",
+    "X_train.shape[0]/X.shape[0], X_eval.shape[0]/X.shape[0], X_test.shape[0]/X.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "85c9e4f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the hyperparameter grid for Random Forest\n",
+    "parameters = {\n",
+    "    'n_estimators':[int(i) for i in np.linspace(180,220, 5)],\n",
+    "    'max_depth': [int(i) for i in np.linspace(15,25, 5)],\n",
+    "#    'min_impurity_decrease': [0.0004, 0.0005, 0.0006,0.0007],\n",
+    "    'min_samples_split':[2,3,4,5],\n",
+    "    'max_features':[None,len(features),\"sqrt\",\"log2\"],\n",
+    "    'criterion':[\"gini\", \"entropy\", \"log_loss\"],\n",
+    "    \"bootstrap\": [True, False]\n",
+    "}\n",
+    "\n",
+    "model = RandomForestClassifier(#min_samples_split=2,\n",
+    "                            #min_samples_leaf=1,\n",
+    "                            random_state=71,\n",
+    "                            n_jobs=-1,\n",
+    "                           )\n",
+    "\n",
+    "grid_search = GridSearchCV(\n",
+    "    model, \n",
+    "    parameters, \n",
+    "    cv= StratifiedKFold(n_splits=10, shuffle=True, random_state=71),\n",
+    "    scoring='recall',\n",
+    "    #n_jobs=-1,\n",
+    "    refit=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "73d09d29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>GridSearchCV(cv=StratifiedKFold(n_splits=10, random_state=71, shuffle=True),\n",
+       "             estimator=RandomForestClassifier(n_jobs=-1, random_state=71),\n",
+       "             param_grid={&#x27;bootstrap&#x27;: [True, False],\n",
+       "                         &#x27;criterion&#x27;: [&#x27;gini&#x27;, &#x27;entropy&#x27;, &#x27;log_loss&#x27;],\n",
+       "                         &#x27;max_depth&#x27;: [15, 17, 20, 22, 25],\n",
+       "                         &#x27;max_features&#x27;: [None, 9, &#x27;sqrt&#x27;, &#x27;log2&#x27;],\n",
+       "                         &#x27;min_samples_split&#x27;: [2, 3, 4, 5],\n",
+       "                         &#x27;n_estimators&#x27;: [180, 190, 200, 210, 220]},\n",
+       "             scoring=&#x27;recall&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GridSearchCV</label><div class=\"sk-toggleable__content\"><pre>GridSearchCV(cv=StratifiedKFold(n_splits=10, random_state=71, shuffle=True),\n",
+       "             estimator=RandomForestClassifier(n_jobs=-1, random_state=71),\n",
+       "             param_grid={&#x27;bootstrap&#x27;: [True, False],\n",
+       "                         &#x27;criterion&#x27;: [&#x27;gini&#x27;, &#x27;entropy&#x27;, &#x27;log_loss&#x27;],\n",
+       "                         &#x27;max_depth&#x27;: [15, 17, 20, 22, 25],\n",
+       "                         &#x27;max_features&#x27;: [None, 9, &#x27;sqrt&#x27;, &#x27;log2&#x27;],\n",
+       "                         &#x27;min_samples_split&#x27;: [2, 3, 4, 5],\n",
+       "                         &#x27;n_estimators&#x27;: [180, 190, 200, 210, 220]},\n",
+       "             scoring=&#x27;recall&#x27;)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(n_jobs=-1, random_state=71)</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(n_jobs=-1, random_state=71)</pre></div></div></div></div></div></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "GridSearchCV(cv=StratifiedKFold(n_splits=10, random_state=71, shuffle=True),\n",
+       "             estimator=RandomForestClassifier(n_jobs=-1, random_state=71),\n",
+       "             param_grid={'bootstrap': [True, False],\n",
+       "                         'criterion': ['gini', 'entropy', 'log_loss'],\n",
+       "                         'max_depth': [15, 17, 20, 22, 25],\n",
+       "                         'max_features': [None, 9, 'sqrt', 'log2'],\n",
+       "                         'min_samples_split': [2, 3, 4, 5],\n",
+       "                         'n_estimators': [180, 190, 200, 210, 220]},\n",
+       "             scoring='recall')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit the GridSearchCV object to your training data\n",
+    "grid_search.fit(X_eval, y_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "278ea04e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'bootstrap': False,\n",
+       "  'criterion': 'gini',\n",
+       "  'max_depth': 20,\n",
+       "  'max_features': 'sqrt',\n",
+       "  'min_samples_split': 2,\n",
+       "  'n_estimators': 220},\n",
+       " 0.7325248392752777)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Best score and params\n",
+    "grid_search.best_params_, grid_search.best_score_ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a5b679d",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    ">>> grid_search.best_params_, grid_search.best_score_ \n",
+    "({'bootstrap': False,\n",
+    "  'criterion': 'gini',\n",
+    "  'max_depth': 20,\n",
+    "  'max_features': 'sqrt',\n",
+    "  'min_samples_split': 2,\n",
+    "  'n_estimators': 220},\n",
+    " 0.7325248392752777)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fc8a9bfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5001"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(X_eval+X_train).shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76c33c33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.set_params(**grid_search.best_params_)\n",
+    "model.fit(pd.concat([X_eval,X_train]).reset_index(),\n",
+    "          pd.concat([y_eval,y_train]).reset_index()\n",
+    "         )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "110688b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
